--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.trigersoft</groupId>
-            <artifactId>jaque</artifactId>
-            <version>2.1.4</version>
+            <groupId>com.github.collinalpert</groupId>
+            <artifactId>lambda2sql</artifactId>
+            <version>1.5</version>
         </dependency>
+
 
         <dependency>
             <groupId>mysql</groupId>
