--- a/.github/workflows/post-push.yml
+++ b/.github/workflows/post-push.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '13'
 
       - name: Release to Central Repository
-        uses: samuelmeuli/action-maven-publish@v1.3.0
+        uses: samuelmeuli/action-maven-publish@v1.3.1
         with:
           gpg_private_key: ${{ secrets.gpg_private_key }}
           gpg_passphrase: ${{ secrets.gpg_passphrase }}
@@ -45,6 +45,7 @@ jobs:
           gpg_passphrase: ${{ secrets.gpg_passphrase }}
         run: |
           mkdir -p ~/.m2
+          export GPG_TTY=$(tty)
           echo "${gpg_private_key}" | gpg --batch --import
           echo "<settings><servers><server><id>github</id><username>CollinAlpert</username><password>${github_token}</password></server></servers></settings>" > ~/.m2/settings.xml
           mvn clean deploy -B -e -Dmaven.wagon.http.pool=false -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/CollinAlpert/Java2DB -Dgpg.passphrase=${gpg_passphrase}
