--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.collinalpert</groupId>
     <artifactId>java2db</artifactId>
-    <version>6.0.1</version>
+    <version>6.1.0</version>
     <packaging>jar</packaging>
 
     <name>Java2DB</name>
@@ -35,7 +35,7 @@
     <scm>
         <connection>scm:git:git://github.com/CollinAlpert/Java2DB.git</connection>
         <developerConnection>scm:git:ssh://github.com:CollinAlpert/Java2DB.git</developerConnection>
-        <url>http://github.com/CollinAlpert/Java2DB/tree/master</url>
+        <url>https://github.com/CollinAlpert/Java2DB/tree/master</url>
     </scm>
 
     <distributionManagement>
@@ -50,7 +50,7 @@
     </distributionManagement>
 
     <properties>
-        <java-version>13</java-version>
+        <java-version>11</java-version>
         <jdk.version>${java-version}</jdk.version>
         <maven.compiler.release>${java-version}</maven.compiler.release>
         <maven.compiler.source>${java-version}</maven.compiler.source>
@@ -62,19 +62,19 @@
         <dependency>
             <groupId>com.github.collinalpert</groupId>
             <artifactId>lambda2sql</artifactId>
-            <version>2.4.0</version>
+            <version>2.5.0</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.22</version>
+            <version>8.0.26</version>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0</version>
+            <version>5.7.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
